[gd_scene load_steps=8 format=2]

[ext_resource path="res://Recursos/Botões/selected_button_themes.tres" type="StyleBox" id=1]
[ext_resource path="res://Recursos/Planos de Fundo/mesa-busto3.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Scripts das Interfaces/Executivo.gd" type="Script" id=3]
[ext_resource path="res://Recursos/Botões/SetaNormal.png" type="Texture" id=4]
[ext_resource path="res://Recursos/Botões/SetaHover.png" type="Texture" id=5]
[ext_resource path="res://Recursos/Botões/SetaPressed.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Musicas/Y2Mate.is - 8-bit Mass Effect - Uncharted Worlds (Galaxy Map Song)---ja8Fuw9pY-160k-1648818477128.mp3" type="AudioStream" id=7]

[node name="Executivo" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Aprovar" type="Button" parent="."]
visible = false
margin_left = 315.0
margin_top = 503.0
margin_right = 952.0
margin_bottom = 604.0
custom_styles/hover = ExtResource( 1 )
text = "Promulgação e Publicação"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Imprensa" type="Button" parent="."]
visible = false
margin_left = 315.0
margin_top = 503.0
margin_right = 952.0
margin_bottom = 604.0
custom_styles/hover = ExtResource( 1 )
text = "Imprensa"

[node name="Ideia" type="Button" parent="."]
margin_left = 315.0
margin_top = 503.0
margin_right = 952.0
margin_bottom = 604.0
custom_styles/hover = ExtResource( 1 )
text = "Idéia de PEC"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltar" type="Button" parent="."]
margin_left = 35.0
margin_top = 620.0
margin_right = 215.0
margin_bottom = 690.0
custom_styles/hover = ExtResource( 1 )
text = "Voltar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Direita" type="TextureButton" parent="."]
margin_left = 1010.0
margin_top = 526.0
margin_right = 1990.0
margin_bottom = 1506.0
rect_rotation = 90.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Esquerda" type="TextureButton" parent="."]
margin_left = 260.0
margin_top = 575.0
margin_right = 1240.0
margin_bottom = 1555.0
rect_rotation = -90.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="musicaexecutivo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
autoplay = true

[connection signal="pressed" from="Aprovar" to="." method="_on_Aprovar_pressed"]
[connection signal="pressed" from="Imprensa" to="." method="_on_Imprensa_pressed"]
[connection signal="pressed" from="Ideia" to="." method="_on_Ideia_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_Voltar_pressed"]
[connection signal="pressed" from="Direita" to="." method="_on_Direita_pressed"]
[connection signal="pressed" from="Esquerda" to="." method="_on_Esquerda_pressed"]
